src/main/fabric8/deployment.yml
apiVersion: v1
kind: Deployment
metadata:
  name: ${project.artifactId}
spec:
  template:
    spec:
      serviceAccount: springboot-configmap
      containers:
        - readinessProbe:
            httpGet:
              path: /api/greeting
              port: 8080
              scheme: HTTP
