src/main/fabric8/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    app.kubernetes.io/vcs-uri: git@github.com:snowdrop/configmap-example.git
  labels:
    app.kubernetes.io/part-of: configmap-example
    app.kubernetes.io/name: configmap-service
    app.kubernetes.io/component: frontend
    app.openshift.io/runtime: rh-spring-boot
    app.openshift.io/runtime-version: ${spring-boot.version}
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: ${project.artifactId}
